nullaway_error_DB6B940D-0A3B-4A96-9ED9-4EF69D56093C.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/annotation/ContextAnnotationAutowireCandidateResolver.java:121: error: [NullAway] passing @Nullable parameter 'beanName' where @NonNull is required
							dlbf.registerDependentBean(autowiredBeanName, beanName);
							                                              ^
    (see http://t.uber.com/nullaway )
